[project]
name = "recruitee-mcp-server"
version = "0.1.0"
description = "MCP server for Recruitee API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "async-lru>=2.0.5",
    "fastapi>=0.115.12",
    "fastmcp>=2.12.0,<3.0.0",
    "markdown>=3.8.2",
    "slowapi>=0.1.9",
    "httpx>=0.27.0",
]
